style: add style to prevent overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,3 +7,10 @@
 body {
   font-family: "Inter", sans-serif;
 }
+
+@layer base {
+  html,
+  body {
+    overflow-x: clip;
+  }
+}
